--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
   <body>
     <%- include('./partials/header', {page: 'Home'}) %>
 
-    <main>
+    <main class="home">
       <div class="mainTitle">
         <h2>JellInventory</h2>
         <p>Make Inventory as Fun as Jelly!</p>
@@ -12,12 +12,19 @@
 
       <div class="mainMenu">
         <ul>
-          <li><a href="/items">Items</a></li>
-          <li><a href="/categories">Categories</a></li>
+          <li><a href="/items" class="itemButton">Items</a></li>
+          <li><a href="/categories" class="categoriesButton">Categories</a></li>
         </ul>
       </div>
     </main>
 
     <%- include('./partials/footer') %>
+
+    <div class="sliderLeft"></div>
+    <div class="sliderRight"></div>
+    <div class="sliderLeftBack"></div>
+    <div class="sliderRightBack"></div>
   </body>
+
+  <script src="./js/index.js"></script>
 </html>
