--- a/views/categoryForm.ejs
+++ b/views/categoryForm.ejs
@@ -14,7 +14,7 @@
             <input type="text" id="name" name="name" required />
           </div>
 
-          <button type="submit">Submit</button>
+          <button type="submit" class="submitItem">Submit</button>
         </div>
       </form>
     </main>
